--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     </div>
     <div class="product-card">
       <img src="pumpkin.jpg" alt="Pumpkin">
-      <p>Pumpkin<br><strong>$5.99</strong></p>
+      <p>Pumpkin<br><strong>₹50</strong></p>
     </div>
   </div>
 </section>
